[gd_scene load_steps=8 format=2]

[ext_resource path="res://temp/Test.gd" type="Script" id=1]
[ext_resource path="res://objects/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://other/Support.tscn" type="PackedScene" id=3]
[ext_resource path="res://other/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://other/Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Spring.tscn" type="PackedScene" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="Platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 337.392, 266.158 )

[node name="Platform7" parent="." instance=ExtResource( 2 )]
position = Vector2( 527.83, 267.75 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.831, 266.442 )

[node name="Platform6" parent="." instance=ExtResource( 2 )]
position = Vector2( 575.269, 268.033 )

[node name="Platform3" parent="." instance=ExtResource( 2 )]
position = Vector2( 432.558, 266.761 )

[node name="Platform8" parent="." instance=ExtResource( 2 )]
position = Vector2( 622.996, 268.352 )

[node name="Platform4" parent="." instance=ExtResource( 2 )]
position = Vector2( 480.724, 267.311 )

[node name="Platform5" parent="." instance=ExtResource( 2 )]
position = Vector2( 671.162, 268.903 )

[node name="Support" parent="." instance=ExtResource( 3 )]
position = Vector2( 338.703, 299.514 )

[node name="Support5" parent="." instance=ExtResource( 3 )]
position = Vector2( 529.141, 301.105 )

[node name="Support2" parent="." instance=ExtResource( 3 )]
position = Vector2( 385.768, 299.239 )

[node name="Support6" parent="." instance=ExtResource( 3 )]
position = Vector2( 576.206, 300.83 )

[node name="Support3" parent="." instance=ExtResource( 3 )]
position = Vector2( 433.834, 299.251 )

[node name="Support7" parent="." instance=ExtResource( 3 )]
position = Vector2( 623.211, 300.577 )

[node name="Support4" parent="." instance=ExtResource( 3 )]
position = Vector2( 479.652, 299.533 )

[node name="Support8" parent="." instance=ExtResource( 3 )]
position = Vector2( 670.887, 301.656 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 332.902, 226.139 )
physics_material_override = SubResource( 1 )
linear_velocity = Vector2( 100, 0 )
linear_damp = -1.0
angular_damp = -1.0

[node name="Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( 675.323, 212.603 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Spring" parent="." instance=ExtResource( 6 )]
position = Vector2( 529.975, 230.639 )
power = 200.0
[connection signal="body_entered" from="Ball" to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="triggered" from="Spring" to="." method="_on_Spring_triggered"]
